Fix scrolling and height cut off

--- a/panel/panel.less
+++ b/panel/panel.less
@@ -3,7 +3,7 @@
 components-panel {
 	display: block;
 	height: 100%;
-	overflow: hidden;
+	overflow-y: hidden;
 
 	.grid-container {
 		display: grid;
